[gd_scene load_steps=7 format=3 uid="uid://cie20igaatx1b"]

[ext_resource type="Texture2D" uid="uid://hbmawjw1jtdg" path="res://assets/objects/Skip_PocionRoja.png" id="1_1hikp"]
[ext_resource type="Script" path="res://scripts/drops/potion_red.gd" id="1_fay30"]
[ext_resource type="AudioStream" uid="uid://brw5xsjtpb2hs" path="res://sound/sfx/Fx_BubbleExplotion4.wav" id="2_enkmp"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3srtl"]
radius = 34.0
height = 88.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1i7eb"]
radius = 45.0
height = 108.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_2y2fv"]
random_pitch = 1.5
random_volume_offset_db = 6.0
streams_count = 1
stream_0/stream = ExtResource("2_enkmp")

[node name="Potion_Red" type="StaticBody2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_fay30")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_1hikp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_3srtl")

[node name="Area2D" type="Area2D" parent="."]

[node name="HitBox" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_1i7eb")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="SFX_Pops" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_2y2fv")
volume_db = -10.0
bus = &"SFX"

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
